feat!: add oraylen platform type